--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,6 @@
 /ModuleCreator/src
 /ModuleCreator/include
 /ModuleCreator/src
+/BuilderTool/PulseEngineBuilder/.vs
+/BuilderTool
+/ModuleCreator/include
