--- a/EngineBuilder/.vscode/settings.json
+++ b/EngineBuilder/.vscode/settings.json
@@ -76,7 +76,27 @@
     "xtr1common": "cpp",
     "xtree": "cpp",
     "xutility": "cpp",
-    "text_encoding": "cpp"
+    "text_encoding": "cpp",
+    "bitset": "cpp",
+    "condition_variable": "cpp",
+    "csignal": "cpp",
+    "cstdarg": "cpp",
+    "cwctype": "cpp",
+    "deque": "cpp",
+    "set": "cpp",
+    "unordered_set": "cpp",
+    "memory_resource": "cpp",
+    "random": "cpp",
+    "regex": "cpp",
+    "source_location": "cpp",
+    "string_view": "cpp",
+    "future": "cpp",
+    "numbers": "cpp",
+    "queue": "cpp",
+    "semaphore": "cpp",
+    "stack": "cpp",
+    "cinttypes": "cpp",
+    "variant": "cpp"
   },
   "C_Cpp_Runner.msvcBatchPath": "C:/Program Files/Microsoft Visual Studio/2022/Community/VC/Auxiliary/Build/vcvarsall.bat",
   "C_Cpp_Runner.cCompilerPath": "gcc",
