--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@
 /EngineBuilder/Build
 /EngineBuilder/assets
 /EngineBuilder/BuildScriptEditor
+/EngineBuilder/BuildGame
+/EngineBuilder/BuildScriptGame
