--- a/EngineBuilder/BuildConfig.json
+++ b/EngineBuilder/BuildConfig.json
@@ -67,7 +67,35 @@
         "include/imgui/imgui_widgets.cpp",
         "include/imgui/imgui.cpp",
         "include/imgui/backends/imgui_impl_glfw.cpp",
-        "include/imgui/backends/imgui_impl_opengl3.cpp"
+        "include/imgui/backends/imgui_impl_opengl3.cpp",
+        "src/imGUI/TextEditor/buffer.cpp",
+        "src/imGUI/TextEditor/commands.cpp",
+        "src/imGUI/TextEditor/display.cpp",
+        "src/imGUI/TextEditor/editor.cpp",
+        "src/imGUI/TextEditor/filesystem.cpp",
+        "src/imGUI/TextEditor/glyph_iterator.cpp",
+        "src/imGUI/TextEditor/indexer.cpp",
+        "src/imGUI/TextEditor/keymap.cpp",
+        "src/imGUI/TextEditor/line_widgets.cpp",
+        "src/imGUI/TextEditor/mcommon/animation/timer.cpp",
+        "src/imGUI/TextEditor/mcommon/file/path.cpp",
+        "src/imGUI/TextEditor/mcommon/string/stringutils.cpp",
+        "src/imGUI/TextEditor/mode.cpp",
+        "src/imGUI/TextEditor/mode_search.cpp",
+        "src/imGUI/TextEditor/mode_standard.cpp",
+        "src/imGUI/TextEditor/mode_tree.cpp",
+        "src/imGUI/TextEditor/mode_vim.cpp",
+        "src/imGUI/TextEditor/range_markers.cpp",
+        "src/imGUI/TextEditor/scroller.cpp",
+        "src/imGUI/TextEditor/splits.cpp",
+        "src/imGUI/TextEditor/syntax.cpp",
+        "src/imGUI/TextEditor/syntax_markdown.cpp" ,
+        "src/imGUI/TextEditor/syntax_providers.cpp",
+        "src/imGUI/TextEditor/syntax_rainbow_brackets.cpp",
+        "src/imGUI/TextEditor/syntax_tree.cpp" ,
+        "src/imGUI/TextEditor/tab_window.cpp",
+        "src/imGUI/TextEditor/theme.cpp",
+        "src/imGUI/TextEditor/window.cpp"
       ]
     },
     {
